--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,55 +1,2 @@
-/* Global styles */
-// ROOT
-\:root
-  --color-white: #FFFFFF
-  --color-black: #242424
-  --color-blue: #222831
-  --color-grey: #EEEEEE
-  --color-deepgrey: #393E46
-  --color-teal: #00ADB5
-  --color-green: #53BF9D
-  --color-red: #F94C66
-  --color-yellow: #FFC54D
-// Override by body class
-// @TODO-Y: Think about.
-body:not(.dark-theme)
-  --color-primary: var(--color-teal)
-
-  --color-background: var(--color-white)
-
-  --color-heading: var(--color-blue)
-  --color-text: var(--color-deepgrey)
-
-  --color-border: var(--color-teal)
-  --color-border-hover: var(--color-green)
-
-  --section-gap: 48px
-body.dark-theme
-  --color-primary: var(--color-red)
-
-  --color-background: var(--color-black)
-
-  --color-heading: var(--color-white)
-  --color-text: var(--color-grey)
-// Host
-//\:host-context(.test)
-//  --color-background: var(--color-teal)
-// RESET
-*
-  margin: 0
-  padding: 0
-  box-sizing: border-box
-// # Body
-body
-  min-height: 100vh
-  color: var(--color-text)
-  background: var(--color-background)
-  transition: color 0.5s, background-color 0.5s
-  line-height: 1.6
-  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
-  font-size: 14px
-// # Interactive
-a,
-button
-  cursor: pointer
-  text-decoration: none
+@import "./styles/theme/index"
+@import "./styles/index"
