refactor: global style and layouts styles

--- a/src/app/layouts/not-found/not-found.component.html
+++ b/src/app/layouts/not-found/not-found.component.html
@@ -1,8 +1,10 @@
-<!-- Mark -->
-<strong>Layout: not-found</strong>
-<!-- Router -->
-<router-outlet></router-outlet>
-<!-- Link -->
-<a routerLink="/">Return to website home page</a>
-<!-- Footer -->
-<app-footer></app-footer>
+<div class="not-found-layout">
+  <!-- Mark -->
+  <strong>Layout: not-found</strong>
+  <!-- Router -->
+  <router-outlet></router-outlet>
+  <!-- Link -->
+  <a routerLink="/">Return to website home page</a>
+  <!-- Footer -->
+  <app-footer></app-footer>
+</div>
