--- a/src/app/layouts/website/website.component.html
+++ b/src/app/layouts/website/website.component.html
@@ -1,8 +1,10 @@
-<!-- Header -->
-<app-header></app-header>
-<!-- Mark -->
-<strong>Layout: website</strong>
-<!-- Router -->
-<router-outlet></router-outlet>
-<!-- Footer -->
-<app-footer></app-footer>
+<div class="website-layout">
+  <!-- Header -->
+  <app-header></app-header>
+  <!-- Mark -->
+  <strong>Layout: website</strong>
+  <!-- Router -->
+  <router-outlet></router-outlet>
+  <!-- Footer -->
+  <app-footer></app-footer>
+</div>
