refactor: change architecture way with features, widgets and shared modules

--- a/src/app/widgets/header/header.component.html
+++ b/src/app/widgets/header/header.component.html
@@ -8,5 +8,5 @@
   </nav>
 
   <!-- Button: Theme toggle -->
-  <button>{{ true ? 'Light' : 'Dark' }} theme</button>
+  <app-theme-toggle-button></app-theme-toggle-button>
 </header>
