feat: update theme-toggle-button component

--- a/src/app/features/theme-toggle-button/theme-toggle-button.component.html
+++ b/src/app/features/theme-toggle-button/theme-toggle-button.component.html
@@ -1,1 +1,3 @@
-<button (click)="themeService.toggleTheme()">{{ themeService.isLightTheme ? 'Light' : 'Dark' }}</button>
+<button (click)="themeService.toggleTheme()">
+  <i-feather name="{{ themeService.isLightTheme ? 'sun' : 'moon' }}"></i-feather>
+</button>
