--- a/src/styles/theme/_variables.sass
+++ b/src/styles/theme/_variables.sass
@@ -34,7 +34,9 @@
   // Params
   // # Element size
   --el-width: 38px
+  --el-width-small: 24px
   --el-height: 38px
+  --el-height-small: 24px
   // # Font Size
   --font-size-h1: 64px
   --font-size-h2: 48px
