--- a/src/styles/core/reset.sass
+++ b/src/styles/core/reset.sass
@@ -3,6 +3,10 @@
   margin: 0
   padding: 0
   box-sizing: border-box
+  //outline: none
+  // Outline alternative
+  //&:focus
+  //  box-shadow: 0 0 1px 2px var(--color-primary)
 // # Body
 body
   min-height: 100vh
@@ -17,3 +21,5 @@ a,
 button
   cursor: pointer
   text-decoration: none
+  background: none
+  border: none
