refactor: update way to work with ng module, updated styles and created first widgets

--- a/src/app/layouts/not-found/not-found.component.html
+++ b/src/app/layouts/not-found/not-found.component.html
@@ -1,10 +1,8 @@
 <div class="not-found-layout">
-  <!-- Mark -->
-  <strong>Layout: not-found</strong>
+  <!-- Header -->
+  <app-header></app-header>
   <!-- Router -->
   <router-outlet></router-outlet>
-  <!-- Link -->
-  <a routerLink="/">Return to website home page</a>
   <!-- Footer -->
   <app-footer></app-footer>
 </div>
