--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,2 +1,8 @@
-<!-- Title -->
-<h1>Page: About</h1>
+<div class="about-page">
+  <app-present
+    title="Page: About"
+    description="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, consequuntur dolores doloribus esse explicabo facilis illo magnam maiores nemo nisi possimus quo rerum sit alias deleniti dolore inventore labore quas."
+    [buttonFunction]="clickTest"
+    buttonTitle="Click me!"
+  ></app-present>
+</div>
