--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,9 @@
 <!-- Title -->
-<h1>Page: Home</h1>
+<div class="home-page">
+  <app-present
+    title="Page: Home"
+    description="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, consequuntur dolores doloribus esse explicabo facilis illo magnam maiores nemo nisi possimus quo rerum sit vel voluptatibus. Accusantium alias deleniti dolore inventore labore laudantium maxime nostrum omnis quas."
+    [buttonFunction]="clickTest"
+    buttonTitle="Click me"
+  ></app-present>
+</div>
