--- a/src/styles/theme/_variables.sass
+++ b/src/styles/theme/_variables.sass
@@ -32,6 +32,7 @@
   --color-border-hover: var(--color-green)
 
   // Params
+  --content-max-width: 1080px
   // # Element size
   --el-width: 38px
   --el-width-small: 24px
@@ -44,6 +45,9 @@
   --font-size-h4: 28px
   --font-size-h5: 22px
   --font-size-h6: 18px
+  --font-size-important: 16px
+  --font-size-text: 14px
+  --font-size-small: 12px
   // # Font Weight
   --font-weight-header: 700
   --font-weight-important: 600
