--- a/src/app/layouts/not-found/not-found.component.sass
+++ b/src/app/layouts/not-found/not-found.component.sass
@@ -2,4 +2,8 @@
 
 .not-found-layout
   width: 100%
-  +dfx(column, flex-start, center)
+  min-height: 100vh
+  +dfx(column, flex-start, stretch)
+  // Position on the bottom of screen
+  app-footer
+    margin-top: auto
