--- a/src/app/layouts/website/website.component.sass
+++ b/src/app/layouts/website/website.component.sass
@@ -3,4 +3,7 @@
 .website-layout
   width: 100%
   min-height: 100vh
-  +dfx(column, flex-start, center)
+  +dfx(column, flex-start, stretch)
+  // Position on the bottom of screen
+  app-footer
+    margin-top: auto
