refactor: use :host in component style

--- a/src/app/pages/not-found/not-found.component.sass
+++ b/src/app/pages/not-found/not-found.component.sass
@@ -1,6 +1,4 @@
 @import "helpers"
 
-app-not-found-oops
-  display: flex
-  flex-direction: column
-  align-items: center
+\:host
+  +dfx(column, $ai: center)
