--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -1,6 +1,4 @@
 @import "helpers"
 
-.home-page
-  display: flex
-  flex-direction: column
-  align-items: center
+\:host
+  +dfx(column, $ai: center)
